71% покрытия тестами